// For generation use:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth.proto

syntax = "proto3";

package gophKeeper;

option go_package = "gophKeeper/proto";


message LoginRequest {
  string login    = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Register(LoginRequest) returns (LoginResponse) {};
}
